# sssg

./: .gitmodules  README.md  dune-project  sssg.opam
lib/: dune  filepaths.ml  generator.ml  server.ml
lib/templates/: default.eml.html  dune  footer.eml.html  header.eml.html  index.eml.html  navbar.eml.html  post.eml.html  post_list.eml.html  section.eml.html
sections/artigos/calculo-discreto/: calculo-discreto.html
sections/artigos/computadores_gramaticas/: computadores_gramaticas.html
sections/artigos/decepcoes-basicas/: decepcoes-basicas.html
sections/artigos/parser-flex/: parser-flex.html
sections/artigos/parser-haskell/: parser-haskell.html
sections/artigos/proofs/: proofs.html
sections/projetos/: index.html
styles/: index.css
