(lang dune 3.3)

(name sssg)

(generate_opam_files true)

(source
 (github o-santi/sssg))

(authors "santi")

(maintainers "santi")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name sssg)
 (synopsis "santi's static site generator")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
